--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04-primera-entrega-pf",
+  "name": "Backend Martín Santamaría",
   "version": "1.0.0",
   "description": "",
   "main": "src/app.js",
